# fnpm

./: .claude.md  .gitignore  AGENTS.md  CHANGELOG_AST.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY_IMPLEMENTATION.md  SECURITY_QUICKSTART.md  SECURITY_SUMMARY.md  build.rs  clippy.toml  deny.toml  install.sh  llms.txt  rust-toolchain.toml
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  deploy.yml  quality.yml
commands/: dev-check.md  release-smoke.md  security-check.md
docs/: AST_ANALYSIS_GUIDE.md  AST_DEBUG_COMMAND.md  AST_INTEGRATION_STATUS.md  AST_QUICK_START.md  AST_README.md  BEHAVIORAL_SECURITY_DETECTION.md  CI_CD.md  CROSS_PLATFORM.md  DETECTION_OUTPUT_EXAMPLES.md  FULL_SECURITY_REPORTS.md  HOOKS.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_BAR.en.md  PROGRESS_BAR.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_EXAMPLES.md  SUPPLY_CHAIN_DETECTION_SUMMARY.md  TESTING.md  TRANSITIVE_SECURITY.md  WINDOWS_COMPATIBILITY.md
skills/fnpm-dev/: SKILL.md
skills/fnpm-security/: SKILL.md
src/: adapt.rs  adapter.rs  ai_review.rs  ast_analyzer.rs  ast_debug.rs  ast_security_analyzer.rs  config.rs  detector.rs  doctor.rs  drama_animation.rs  hooks.rs  lib.rs  main.rs  package_manager.rs  security.rs
src/package_managers/: bun.rs  deno.rs  mod.rs  npm.rs  pnpm.rs  yarn.rs
tests/: ast_analyzer_tests.rs  doctor_tests.rs  hooks_tests.rs  integration_tests.rs  package_managers_tests.rs  security_tests.rs
tests/functional/: supply_chain_test.sh
