[package]
name = "fnpm"
version = "0.1.1"
edition = "2021"
description = "A unified package manager interface that helps teams standardize their workflow while allowing developers to use their preferred tool (npm, yarn, or pnpm)"
authors = ["Jairo Fernandez"]

[[bin]]
name = "fnpm"
path = "src/main.rs"

[lib]
name = "fnpm"
path = "src/lib.rs"

[target.'cfg(target_arch = "aarch64")'.dependencies]
libc = "0.2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.9"
colored = "3.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
