[package]
name = "fnpm"
version = "0.1.1"
edition = "2021"
description = "A unified package manager interface that helps teams standardize their workflow while allowing developers to use their preferred tool (npm, yarn, or pnpm)"
authors = ["Jairo Fernandez"]

[[bin]]
name = "fnpm"
path = "src/main.rs"

[lib]
name = "fnpm"
path = "src/lib.rs"

[target.'cfg(target_arch = "aarch64")'.dependencies]
libc = "0.2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
inquire = "0.9"
colored = "3.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
semver = "1.0"
uuid = { version = "1.21", features = ["v4"] }
indicatif = "0.18"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
oxc_parser = "0.114"
oxc_ast = "0.114"
oxc_ast_visit = "0.114"
oxc_span = "0.114"
oxc_allocator = "0.114"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1"
serial_test = "3.4"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
